<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/edit_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/edit_length"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_length"
        android:hint="@string/edit_weight"
        android:inputType="number" />

    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/bmi_value"
        android:textSize="100dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="resetResult"
        android:text="@string/button_reset" />

    <Button
        android:id="@+id/compute_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_button"
        android:onClick="computeResult"
        android:text="@string/button_compute" />

</RelativeLayout>