<!-- PORTRAIT MODE! -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray"
       android:shrinkColumns="*"
        android:stretchColumns="*" >
         
        <LinearLayout
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_view_red"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"	
                android:layout_gravity="center_horizontal"
                android:text="@string/red"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/text_view_green"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/green"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/text_view_blue"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/blue"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_red"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />
           

            <EditText
                android:id="@+id/edit_green"
               android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />
            
             <EditText
                android:id="@+id/edit_blue"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />
        </LinearLayout>
        

                <Button
                    android:id="@+id/button_changecolor"
                    android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                    android:onClick="changeColor"
                    android:text="@string/button_changecolor" />
           
        
    </TableLayout>

</RelativeLayout>